--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Project connect to The Star Wars API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test-watch": "npm run test -- --watch"
   },
   "author": "Irwing Naranjo <khalisser@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.5.1"
+  },
+  "dependencies": {
+    "axios": "^0.26.0"
   }
 }
