--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jest": "^27.5.1"
   },
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "dotenv": "^16.0.0"
   }
 }
