--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "axios": "^0.26.0"
+    "express": "^4.17.3"
   }
 }
