--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,24 @@
 name: Build and Deploy
 on:
   push:
-    branches:
-      - main
+    branches: [master]
+  pull_request:
+    branches: [master]
 jobs:
-  install:
-    name: install
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
         run: npm install
 
-  test:
-    name: test
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test
-        run: npm test --detectOpenHandles
+      - name: Run Jest
+        uses: stefanoeb/jest-action@1.0.3
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: master
-          folder: ./
-
-  deploy:
-    anem: deploy
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4.2.5
-        with:
-          branch: master
-          folder: ./
+          folder: build
