--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: stefanoeb/jest-action@1.0.3
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4.2.5
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: master
-          folder: ./
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
